--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project basedir="." default="package" name="yunweitool">
+<project basedir="." default="package" name="webs">
 
 	<property name="src" value="src" />
 	<property name="tar" value="bin" />
